--- a/TeslaRent_Server/Shared/NavMenu.razor
+++ b/TeslaRent_Server/Shared/NavMenu.razor
@@ -35,6 +35,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> User List
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="role-list">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Role List
+            </NavLink>
+        </div>
     </nav>
 </div>
 
